azuredeploy.json
{
  "$schema": "http://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json#",
  "contentVersion": "1.0.0.0",
  "parameters": {
    "sourcePassword": {
      "type": "securestring"
    },
    "relayPassword": {
      "type": "securestring"
    },
    "adminPassword": {
      "type": "securestring"
    }
  },
  "variables": {
    "nsgId": "[resourceId(resourceGroup().name, 'Microsoft.Network/networkSecurityGroups', 'nsg')]",
    "vnetId": "[resourceId(resourceGroup().name, 'Microsoft.Network/virtualNetworks', 'vnet')]",
    "subnetRef": "[concat(variables('vnetId'), '/subnets/default')]"
  },
  "resources": [
    {
      "name": "iface",
      "type": "Microsoft.Network/networkInterfaces",
      "apiVersion": "2018-10-01",
      "location": "[resourceGroup().location]",
      "dependsOn": [
        "Microsoft.Network/networkSecurityGroups/nsg",
        "Microsoft.Network/virtualNetworks/vnet",
        "Microsoft.Network/publicIpAddresses/public"
      ],
      "properties": {
        "ipConfigurations": [
          {
            "name": "ipconfig1",
            "properties": {
              "subnet": {
                "id": "[variables('subnetRef')]"
              },
              "privateIPAllocationMethod": "Dynamic",
              "publicIpAddress": {
                "id": "[resourceId(resourceGroup().name, 'Microsoft.Network/publicIpAddresses', 'public')]"
              }
            }
          }
        ],
        "networkSecurityGroup": {
          "id": "[variables('nsgId')]"
        }
      }
    },
    {
      "name": "nsg",
      "type": "Microsoft.Network/networkSecurityGroups",
      "apiVersion": "2019-02-01",
      "location": "[resourceGroup().location]",
      "properties": {
        "securityRules": [
          {
            "name": "HTTP",
            "properties": {
              "priority": 320,
              "protocol": "Tcp",
              "access": "Allow",
              "direction": "Inbound",
              "sourceAddressPrefix": "*",
              "sourcePortRange": "*",
              "destinationAddressPrefix": "*",
              "destinationPortRange": "80"
            }
          },
          {
            "name": "Icecast2",
            "properties": {
              "priority": 330,
              "protocol": "Tcp",
              "access": "Allow",
              "direction": "Inbound",
              "sourceAddressPrefix": "*",
              "sourcePortRange": "*",
              "destinationAddressPrefix": "*",
              "destinationPortRange": "8000"
            }
          }
        ]
      }
    },
    {
      "name": "vnet",
      "type": "Microsoft.Network/virtualNetworks",
      "apiVersion": "2019-02-01",
      "location": "[resourceGroup().location]",
      "properties": {
        "addressSpace": {
          "addressPrefixes": [
            "10.0.0.0/24"
          ]
        },
        "subnets": [
          {
            "name": "default",
            "properties": {
              "addressPrefix": "10.0.0.0/24"
            }
          }
        ]
      }
    },
    {
      "name": "public",
      "type": "Microsoft.Network/publicIpAddresses",
      "apiVersion": "2019-02-01",
      "location": "[resourceGroup().location]",
      "properties": {
        "publicIpAllocationMethod": "Dynamic"
      },
      "sku": {
        "name": "Basic"
      }
    },
    {
      "name": "vm",
      "type": "Microsoft.Compute/virtualMachines",
      "apiVersion": "2018-10-01",
      "location": "[resourceGroup().location]",
      "dependsOn": [
        "Microsoft.Network/networkInterfaces/iface"
      ],
      "properties": {
        "hardwareProfile": {
          "vmSize": "Standard_B1ls"
        },
        "storageProfile": {
          "osDisk": {
            "createOption": "FromImage",
            "managedDisk": {
              "storageAccountType": "Premium_LRS"
            }
          },
          "imageReference": {
            "publisher": "Canonical",
            "offer": "UbuntuServer",
            "sku": "18.04-LTS",
            "version": "latest"
          }
        },
        "networkProfile": {
          "networkInterfaces": [
            {
              "id": "[resourceId('Microsoft.Network/networkInterfaces', 'iface')]"
            }
          ]
        },
        "osProfile": {
          "computerName": "vm",
          "adminUsername": "vmadmin",
          "adminPassword": "[parameters('adminPassword')]",
          "customData": "[base64(concat('#cloud-config\ndisk_setup:\n  ephemeral0:\n    table_type: mbr\n    layout: [[100, 82]]\n    overwrite: True\nfs_setup:\n  - device: ephemeral0.1\n    filesystem: swap\nmounts:\n  - [\"ephemeral0.1\", \"none\", \"swap\", \"sw\", \"0\", \"0\"]\npackages:\n  - icecast2\nwrite_files:\n- path: /etc/default/icecast2\n  content: |\n    CONFIGFILE=\"/etc/icecast2/icecast.xml\"\n    USERID=icecast2\n    GROUPID=icecast\n    ENABLE=true\n- path: /etc/icecast2/icec [...]
        }
      }
    }
  ],
  "outputs": {
    "hostname": {
      "type": "string",
      "value": "[reference('public').dnsSettings.fqdn]"
    },
    "streamAddress": {
      "type": "string",
      "value": "http://[reference('public').dnsSettings.fqdn]:8000/direct"
    },
    "sourcePassword": {
      "type": "string",
      "value": "[parameters('sourcePassword')]"
    },
    "relayPassword": {
      "type": "string",
      "value": "[parameters('relayPassword')]"
    },
    "adminPassword": {
      "type": "string",
      "value": "[parameters('adminPassword')]"
    }
  }
}
